--- a/m03w06/package.json
+++ b/m03w06/package.json
@@ -19,6 +19,7 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "morgan": "^1.10.0"
   }
